--- a/013/Maket.kv
+++ b/013/Maket.kv
@@ -1,9 +1,5 @@
 # версия kivi
 #:kivy 1.0
-# импортируем модуль Этикетка
-#: import Label kivy.uix.label.Label
-#: import Button kivy.uix.button.Button
-#: import Buttons Buttons.Buttons
 # Описываем класс class Maket(BoxLayout) для файла 013 - CalcKV.py
 <Maket>:
     # ----------------------------------------------------------------------
@@ -18,15 +14,11 @@
     # дизайн окна - расположение созданных классов (унаследованных)
     #
     # вставляем class Solution(TextInput) - поле для ввода текста
-    Solution:
-    # вставляем class Buttons(Button) - кнопка
-    # Buttons:
-    BoxLayout:
-        # on_kv_post - позволяет сделать цикл в KV файле
-        on_kv_post:
-            # [self.add_widget(Label(text="Label " + str(i))) for i in range(5)]
-            # [self.add_widget(Button()) for i in range(5)]
-            [self.add_widget(Buttons()) for i in range(5)]
+    # встраиваем в Solution (внизу за полем для ввода текста) кнопки калькулятора
+    # on_kv_post - позволяет сделать цикл в KV файле
+    on_kv_post:
+        root.add_widget(root.solution)
+        root.add_widget(root.buttons_many())
     # ----------------------------------------------------------------------
     # вызываем методы
     #
