--- a/005 - simple_applications/003 - simple_calc/calc.kv
+++ b/005 - simple_applications/003 - simple_calc/calc.kv
@@ -1,4 +1,84 @@
 #:kivy 2.0.0
+# C кодом все.Теперь рассмотрим разметку calc.kv
 
+# Сначало пишем в треугольных скобках название класса Calculator как 
+# писали в коде. Далее пишем переменную label как в коде и 
+# присваиваем id:label. Так как наш класс Calculator наследуется от 
+# BoxLayout то у него есть так же атрибут orientation значение которого 
+# мы ставим 'vertical'
+
+# Далее пишем виджет Label(который отображает числа). Пишем ему id:label. 
+# Устанавливаем размер шрифта font_size значение '50sp'
+
+# Далее пишем макет GridLayout где будут располагаться кнопки в табличном виде.
+
+# Далее пишем кнопки устанавливаем у них атрибут text. У кнопок с числами 
+# событию on_press(нажатие на кнопку) присваиваем метод write_number(self) 
+# перед этим написав root.Параметр self это сама же кнопка на которую 
+# мы нажали. Это параметр нужен для того чтобы мы пользовались параметром 
+# instance в методе.
+
+# Далее кнопкам с операциями '+', '-', '*', '/', '=' мы присваем событию 
+# on_press соответствующий метод с класса. Для кнопки с '+' метод root.add(), 
+# для кнопки с '-' метод root.subtract(), для кнопки 
+# с '*' метод root.multiply(), для кнопки с '/' метод root.division() и 
+# для кнопки с '=' метод root.equal()
+
+# Для кнопки с текстом 'C' событию on_press присваиваем метод root.clear()
 <Calc>:
     # vars
+    label: label
+    orientation: 'vertical'
+    Label:
+        id: label
+        font_size: '50sp'
+    GridLayout:
+        cols: 4
+        Button:
+            text: '1'
+            on_press: root.write_number(self)
+        Button:
+            text: '2'
+            on_press: root.write_number(self)
+        Button:
+            text: '3'
+            on_press: root.write_number(self)
+        Button:
+            text: '+'
+            on_press: root.add()
+        Button:
+            text: '4'
+            on_press: root.write_number(self)
+        Button:
+            text: '5'
+            on_press: root.write_number(self)
+        Button:
+            text: '6'
+            on_press: root.write_number(self)
+        Button:
+            text: '-'
+            on_press: root.subtract()
+        Button:
+            text: '7'
+            on_press: root.write_number(self)
+        Button:
+            text: '8'
+            on_press: root.write_number(self)
+        Button:
+            text: '9'
+            on_press: root.write_number(self)
+        Button:
+            text: '*'
+            on_press: root.multiply()
+        Button:
+            text: 'C'
+            on_press: root.clear()
+        Button:
+            text: '0'
+            on_press: root.write_number(self)
+        Button:
+            text: '='
+            on_press: root.equal()
+        Button:
+            text: '/'
+            on_press: root.division()
