--- a/005 - simple_applications/004 - simple_calc_v2/calc.kv
+++ b/005 - simple_applications/004 - simple_calc_v2/calc.kv
@@ -29,9 +29,10 @@
     # vars
     label: label
     orientation: 'vertical'
-    Label:
-        id: label
-        font_size: '50sp'
+    Display:
+        Label:
+            id: label
+            font_size: '50sp'
     GridLayout:
         cols: 4
         Button:
