add calc_v2 step-2

--- a/005 - simple_applications/004 - simple_calc_v2/calc.kv
+++ b/005 - simple_applications/004 - simple_calc_v2/calc.kv
@@ -1,38 +1,13 @@
 #:kivy 2.0.0
-# C кодом все.Теперь рассмотрим разметку calc.kv
 
-# Сначало пишем в треугольных скобках название класса Calculator как 
-# писали в коде. Далее пишем переменную label как в коде и 
-# присваиваем id:label. Так как наш класс Calculator наследуется от 
-# BoxLayout то у него есть так же атрибут orientation значение которого 
-# мы ставим 'vertical'
-
-# Далее пишем виджет Label(который отображает числа). Пишем ему id:label. 
-# Устанавливаем размер шрифта font_size значение '50sp'
-
-# Далее пишем макет GridLayout где будут располагаться кнопки в табличном виде.
-
-# Далее пишем кнопки устанавливаем у них атрибут text. У кнопок с числами 
-# событию on_press(нажатие на кнопку) присваиваем метод write_number(self) 
-# перед этим написав root.Параметр self это сама же кнопка на которую 
-# мы нажали. Это параметр нужен для того чтобы мы пользовались параметром 
-# instance в методе.
-
-# Далее кнопкам с операциями '+', '-', '*', '/', '=' мы присваем событию 
-# on_press соответствующий метод с класса. Для кнопки с '+' метод root.add(), 
-# для кнопки с '-' метод root.subtract(), для кнопки 
-# с '*' метод root.multiply(), для кнопки с '/' метод root.division() и 
-# для кнопки с '=' метод root.equal()
-
-# Для кнопки с текстом 'C' событию on_press присваиваем метод root.clear()
+# Дизайн калькулятора
 <Calc>:
     # vars
     label: label
     orientation: 'vertical'
     Display:
-        Label:
+        DisplayLabel:
             id: label
-            font_size: '50sp'
     GridLayout:
         cols: 4
         Button:
