--- a/005 - simple_applications/004 - simple_calc_v2/design/Display.kv
+++ b/005 - simple_applications/004 - simple_calc_v2/design/Display.kv
@@ -7,7 +7,7 @@
 <Display@BoxLayout>:
     canvas.before:
         Color:
-            rgba: hex('#20b2aa') # LightSeaGreen
+            rgba: hex('#FFFFFF') # White
         Rectangle:
             pos: self.pos
             size: self.size
