--- a/005 - simple_applications/004 - simple_calc_v2/calc.kv
+++ b/005 - simple_applications/004 - simple_calc_v2/calc.kv
@@ -6,8 +6,9 @@
     label: label
     orientation: 'vertical'
     Display:
-        DisplayLabel:
-            id: label
+        DisplayScroll:
+            DisplayLabel:
+                id: label                
     GridLayout:
         cols: 4
         Button:
