--- a/005 - simple_applications/004 - simple_calc_v2/design/DisplayLabel.kv
+++ b/005 - simple_applications/004 - simple_calc_v2/design/DisplayLabel.kv
@@ -5,7 +5,7 @@
 
 # Шрифт (цифры) дисплея калькулятора
 <DisplayLabel@Label>:
-    # расмер шрифта
+    # размер шрифта
     font_size: '50sp'
 
     # цвет шрифта
@@ -17,7 +17,7 @@
     # автоматически переносить/растягивать текст {
     text_size: self.size
     halign: 'right'
-    valign: 'middle'
+    valign: 'top'
     # автоматически переносить/растягивать текст }
 
     # пролистывание текста {
