--- a/005 - simple_applications/004 - simple_calc_v2/design/DisplayLabel.kv
+++ b/005 - simple_applications/004 - simple_calc_v2/design/DisplayLabel.kv
@@ -6,7 +6,10 @@
 # Шрифт (цифры) дисплея калькулятора
 <DisplayLabel@Label>:
     # размер шрифта
-    font_size: '50sp'
+    font_size: '40sp'
+
+    # межстрочный интервал
+    line_height: 0.8
 
     # цвет шрифта
     color: 'black'
@@ -24,5 +27,5 @@
     size_hint_y: None
     height: self.texture_size[1]
     text_size: self.width, None
-    padding: 10, 10
+    padding: 5, 0
     # пролистывание текста }
