--- a/005 - simple_applications/004 - simple_calc_v2/calc.kv
+++ b/005 - simple_applications/004 - simple_calc_v2/calc.kv
@@ -27,58 +27,60 @@
                         id: label_display
                         text: ''
     BoxLayout:
-        orientation: 'vertical'
+        orientation: 'horizontal'
         size_hint: 1, 0.1
+        Button:
+            text: "настройки"
         Button:
             text: "история"
     GridLayout:
         cols: 4
         # padding: [0,2,0,0]
-        Button:
+        ButtonBase:
             text: '1'
             on_press: root.write_number(self)
-        Button:
+        ButtonBase:
             text: '2'
             on_press: root.write_number(self)
-        Button:
+        ButtonBase:
             text: '3'
             on_press: root.write_number(self)
-        Button:
+        ButtonBase:
             text: '+'
             on_press: root.add()
-        Button:
+        ButtonBase:
             text: '4'
             on_press: root.write_number(self)
-        Button:
+        ButtonBase:
             text: '5'
             on_press: root.write_number(self)
-        Button:
+        ButtonBase:
             text: '6'
             on_press: root.write_number(self)
-        Button:
+        ButtonBase:
             text: '-'
             on_press: root.subtract()
-        Button:
+        ButtonBase:
             text: '7'
             on_press: root.write_number(self)
-        Button:
+        ButtonBase:
             text: '8'
             on_press: root.write_number(self)
-        Button:
+        ButtonBase:
             text: '9'
             on_press: root.write_number(self)
-        Button:
+        ButtonBase:
             text: '*'
             on_press: root.multiply()
-        Button:
+        ButtonBase:
             text: 'C'
             on_press: root.clear()
-        Button:
+        ButtonBase:
             text: '0'
             on_press: root.write_number(self)
-        Button:
+        ButtonBase:
             text: '='
             on_press: root.equal()
-        Button:
+        ButtonBase:
             text: '/'
             on_press: root.division()
