--- a/005 - simple_applications/004 - simple_calc_v2/calc.kv
+++ b/005 - simple_applications/004 - simple_calc_v2/calc.kv
@@ -29,9 +29,9 @@
     BoxLayout:
         orientation: 'horizontal'
         size_hint: 1, 0.1
-        Button:
+        ButtonSupport:
             text: "настройки"
-        Button:
+        ButtonSupport:
             text: "история"
     GridLayout:
         cols: 4
