--- a/005 - simple_applications/004 - simple_calc_v2/design/WindowSettings.kv
+++ b/005 - simple_applications/004 - simple_calc_v2/design/WindowSettings.kv
@@ -3,7 +3,7 @@
 # импорт hex цветов
 #:import hex kivy.utils.get_color_from_hex
 
-# Модальное (всплывающе) окно калькулятора
+# Модальное (всплывающе) окно калькулятора - Settings
 <WindowSettings@ModalView>:
     # размер виджета (окна)
     size_hint: 0.9, 0.9
