--- a/005 - simple_applications/004 - simple_calc_v2/calc.kv
+++ b/005 - simple_applications/004 - simple_calc_v2/calc.kv
@@ -39,6 +39,7 @@
             on_press: Factory.WindowHistory().open()
         ButtonSupport:
             text: "info"
+            on_press: Factory.WindowInfo().open()
     GridLayout:
         cols: 4
         # padding: [0,2,0,0]
