--- a/005 - simple_applications/004 - simple_calc_v2/design/WindowHistory.kv
+++ b/005 - simple_applications/004 - simple_calc_v2/design/WindowHistory.kv
@@ -27,4 +27,6 @@
             padding: 10
             Button:
                 text: 'Close'
+                # размер шрифта
+                font_size: '30sp'
                 on_release: root.dismiss()
