update-2 write_number

--- a/005 - simple_applications/004 - simple_calc_v2/calc.kv
+++ b/005 - simple_applications/004 - simple_calc_v2/calc.kv
@@ -82,7 +82,7 @@
         ButtonBase:
             # text: '.'
             text: chr(183)
-            # on_press: root.clear()
+            on_press: root.write_number(self)
         ButtonBase:
             text: '0'
             on_press: root.write_number(self)
