fix write_number and add

--- a/005 - simple_applications/004 - simple_calc_v2/calc.kv
+++ b/005 - simple_applications/004 - simple_calc_v2/calc.kv
@@ -21,7 +21,7 @@
                 spacing: 0
                 DisplayComment:
                     id: label_display_comment
-                    text: 'test display_comment'
+                    text: ''
             BoxLayout:
                 orientation: 'vertical'
                 DisplayScroll:
