--- a/005 - simple_applications/004 - simple_calc_v2/calc.kv
+++ b/005 - simple_applications/004 - simple_calc_v2/calc.kv
@@ -101,7 +101,7 @@
             on_press: root.division()
         ButtonBase:
             text: '<'
-            # on_press: root.equal()
+            on_press: root.back()
         ButtonBase:
             text: '='
             on_press: root.equal()
