--- a/005 - simple_applications/004 - simple_calc_v2/calc.kv
+++ b/005 - simple_applications/004 - simple_calc_v2/calc.kv
@@ -66,7 +66,8 @@
             on_press: root.write_number(self)
         ButtonBase:
             text: '-'
-            on_press: root.subtract()
+            # on_press: root.subtract()
+            on_press: root.subtract() if len(label_display.text) else root.write_number(self)
         ButtonBase:
             text: '7'
             on_press: root.write_number(self)
