--- a/005 - simple_applications/005 - simple_calc_v3/calc.kv
+++ b/005 - simple_applications/005 - simple_calc_v3/calc.kv
@@ -45,48 +45,48 @@
         # padding: [0,2,0,0]
         ButtonBase:
             text: '1'
-            on_press: root.write_number(self)
+            on_press: root.write_digit(self)
         ButtonBase:
             text: '2'
-            on_press: root.write_number(self)
+            on_press: root.write_digit(self)
         ButtonBase:
             text: '3'
-            on_press: root.write_number(self)
+            on_press: root.write_digit(self)
         ButtonBase:
             text: '+'
             on_press: root.add()
         ButtonBase:
             text: '4'
-            on_press: root.write_number(self)
+            on_press: root.write_digit(self)
         ButtonBase:
             text: '5'
-            on_press: root.write_number(self)
+            on_press: root.write_digit(self)
         ButtonBase:
             text: '6'
-            on_press: root.write_number(self)
+            on_press: root.write_digit(self)
         ButtonBase:
             text: '-'
             # on_press: root.subtract()
-            on_press: root.subtract() if len(label_display.text) else root.write_number(self)
+            on_press: root.subtract() if len(label_display.text) else root.write_digit(self)
         ButtonBase:
             text: '7'
-            on_press: root.write_number(self)
+            on_press: root.write_digit(self)
         ButtonBase:
             text: '8'
-            on_press: root.write_number(self)
+            on_press: root.write_digit(self)
         ButtonBase:
             text: '9'
-            on_press: root.write_number(self)
+            on_press: root.write_digit(self)
         ButtonBase:
             text: '*'
             on_press: root.multiply()
         ButtonBase:
             # text: '.'
             text: chr(183)
-            on_press: root.write_number(self)
+            on_press: root.write_digit(self)
         ButtonBase:
             text: '0'
-            on_press: root.write_number(self)
+            on_press: root.write_digit(self)
         ButtonBase:
             text: '%'
             # on_press: root.equal()
