--- a/005 - simple_applications/005 - simple_calc_v3/calc.kv
+++ b/005 - simple_applications/005 - simple_calc_v3/calc.kv
@@ -90,7 +90,7 @@
             on_press: root.write_digit(self)
         ButtonBase:
             text: '%'
-            # on_press: root.equal()
+            on_press: root.percent()
         ButtonBase:
             # text: '/'
             text: chr(247)
