--- a/005 - simple_applications/005 - simple_calc_v3/calc.kv
+++ b/005 - simple_applications/005 - simple_calc_v3/calc.kv
@@ -100,7 +100,7 @@
             on_press: root.clear()
         ButtonBase:
             text: 'M'
-            on_press: root.division()
+            on_press: root.memory()
         ButtonBase:
             text: '<'
             on_press: root.back()
