--- a/005 - simple_applications/005 - simple_calc_v3/calc.kv
+++ b/005 - simple_applications/005 - simple_calc_v3/calc.kv
@@ -36,7 +36,7 @@
                 spacing: 0
                 DisplayMemory:
                     id: label_display_memory
-                    text: 'memory 12345'
+                    text: ''
     BoxLayout:
         orientation: 'horizontal'
         size_hint: 1, 0.1
