--- a/005 - simple_applications/005 - simple_calc_v3/calc.kv
+++ b/005 - simple_applications/005 - simple_calc_v3/calc.kv
@@ -7,6 +7,7 @@
     # vars
     label_display_comment: label_display_comment
     label_display: label_display
+    label_display_memory: label_display_memory
     orientation: 'vertical'
     # padding: 2
     BoxLayout:
