--- a/005 - simple_applications/004 - simple_audioplayer/AudioPlayer.kv
+++ b/005 - simple_applications/004 - simple_audioplayer/AudioPlayer.kv
@@ -17,3 +17,7 @@
     Button:
         text: "Load"
         on_prees: root.load_music()
+    Label:
+        id: filename
+        text: "No song loaded"
+        font_size: '15sp'
