--- a/005 - simple_applications/004 - simple_audioplayer/audioplayer.kv
+++ b/005 - simple_applications/004 - simple_audioplayer/audioplayer.kv
@@ -16,7 +16,7 @@
     #design
     Button:
         text: "Load"
-        on_prees: root.load_music()
+        on_press: root.load_music()
     Label:
         id: filename
         text: "No song loaded"
