--- a/005 - simple_applications/004 - simple_audioplayer/audioplayer.kv
+++ b/005 - simple_applications/004 - simple_audioplayer/audioplayer.kv
@@ -54,7 +54,7 @@
         Button:
             id: pause
             text: 'Pause'
-            disabled: 'True'
+            disabled: True
             on_press: root.pause_music()
         Button:
             id: stop
