--- a/003 - guide_kivy_python_(part_2-widgets)/editor.kv
+++ b/003 - guide_kivy_python_(part_2-widgets)/editor.kv
@@ -11,10 +11,10 @@ Root:
             height: 30
             Button:
                 text: 'Load'
-                # on_release: root.show_load()
+                on_release: root.show_load()
             Button:
                 text: 'Save'
-                # on_release: root.show_save()
+                on_release: root.show_save()
 
         BoxLayout:
             TextInput:
